Add layout for settings screen.

--- a/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/Settings.storyboard
+++ b/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/Settings.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dgc-z3-bps">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,22 +13,126 @@
             <objects>
                 <viewController id="Dgc-z3-bps" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dAO-9q-ZfF">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIP-Tl-W9D">
+                                <rect key="frame" x="198" y="67.333333333333329" width="206" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="3Gw-BD-bm3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" text="IOF (%):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="3d0-xO-qZ7">
+                                <rect key="frame" x="120.66666666666667" y="114.66666666666667" width="62.333333333333329" height="20.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2yW-8T-whP">
+                                <rect key="frame" x="198" y="108" width="206" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Impostos por estado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5s-fw-6nB">
+                                <rect key="frame" x="116.33333333333333" y="175" width="181.66666666666669" height="23"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Exf-OH-1wi">
+                                <rect key="frame" x="0.0" y="223" width="414" height="569"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="tGO-r3-Q8u">
+                                    <rect key="frame" x="0.0" y="109.33333206176758" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="8GO-Ei-B2m">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="53.333332061767578"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8GO-Ei-B2m" id="QvS-6e-pSg">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="53.333332061767578"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0YS-oy-FxL">
+                                                    <rect key="frame" x="30" y="15.999999999999998" width="53" height="21.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Valor" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWB-7G-jxc">
+                                                    <rect key="frame" x="345" y="15.999999999999998" width="39" height="21.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemRedColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0YS-oy-FxL" secondAttribute="bottom" constant="5" id="4Og-IF-Vte"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="uWB-7G-jxc" secondAttribute="trailing" constant="10" id="9v0-r3-ul6"/>
+                                                <constraint firstItem="uWB-7G-jxc" firstAttribute="top" secondItem="QvS-6e-pSg" secondAttribute="topMargin" constant="5" id="B1j-qH-Mv1"/>
+                                                <constraint firstItem="0YS-oy-FxL" firstAttribute="top" secondItem="QvS-6e-pSg" secondAttribute="topMargin" constant="5" id="E4Y-ia-1Ja"/>
+                                                <constraint firstItem="uWB-7G-jxc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0YS-oy-FxL" secondAttribute="trailing" priority="750" constant="10" id="RtC-eT-k9R"/>
+                                                <constraint firstItem="0YS-oy-FxL" firstAttribute="leading" secondItem="QvS-6e-pSg" secondAttribute="leadingMargin" constant="10" id="kBB-hY-tmB"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="uWB-7G-jxc" secondAttribute="bottom" constant="5" id="mam-Lc-pQ2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Asx-Ui-R3x">
+                                <rect key="frame" x="286" y="817" width="116" height="30"/>
+                                <state key="normal" title="Adicionar Estado"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cotaçao do dólar (R$):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="izc-tD-m3y">
+                                <rect key="frame" x="10" y="74" width="173" height="20.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="gQK-J7-D0C"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gQK-J7-D0C" firstAttribute="trailing" secondItem="2yW-8T-whP" secondAttribute="trailing" constant="10" id="2UV-bz-MK2"/>
+                            <constraint firstItem="V5s-fw-6nB" firstAttribute="centerX" secondItem="dAO-9q-ZfF" secondAttribute="centerX" id="3G8-sN-39I"/>
+                            <constraint firstItem="gQK-J7-D0C" firstAttribute="trailing" secondItem="Asx-Ui-R3x" secondAttribute="trailing" constant="12" id="5SR-U6-jYJ"/>
+                            <constraint firstItem="Exf-OH-1wi" firstAttribute="leading" secondItem="gQK-J7-D0C" secondAttribute="leading" id="8Cf-dQ-uWO"/>
+                            <constraint firstItem="3d0-xO-qZ7" firstAttribute="top" secondItem="izc-tD-m3y" secondAttribute="bottom" constant="20" id="FQy-lG-UmJ"/>
+                            <constraint firstItem="Asx-Ui-R3x" firstAttribute="top" secondItem="Exf-OH-1wi" secondAttribute="bottom" constant="25" id="GBB-G6-BaA"/>
+                            <constraint firstItem="WIP-Tl-W9D" firstAttribute="width" secondItem="2yW-8T-whP" secondAttribute="width" id="Msh-89-OQD"/>
+                            <constraint firstItem="gQK-J7-D0C" firstAttribute="trailing" secondItem="WIP-Tl-W9D" secondAttribute="trailing" constant="10" id="POc-ix-dkC"/>
+                            <constraint firstItem="3d0-xO-qZ7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gQK-J7-D0C" secondAttribute="leading" priority="250" constant="10" id="acX-4z-Vdn"/>
+                            <constraint firstItem="gQK-J7-D0C" firstAttribute="bottom" secondItem="Asx-Ui-R3x" secondAttribute="bottom" constant="15" id="bI4-Lg-0If"/>
+                            <constraint firstItem="izc-tD-m3y" firstAttribute="top" secondItem="gQK-J7-D0C" secondAttribute="top" constant="30" id="cWo-O0-YJY"/>
+                            <constraint firstItem="2yW-8T-whP" firstAttribute="leading" secondItem="3d0-xO-qZ7" secondAttribute="trailing" constant="15" id="gpy-hv-U91"/>
+                            <constraint firstItem="V5s-fw-6nB" firstAttribute="top" secondItem="3d0-xO-qZ7" secondAttribute="bottom" constant="40" id="kKX-Fk-d6J"/>
+                            <constraint firstItem="Exf-OH-1wi" firstAttribute="top" secondItem="V5s-fw-6nB" secondAttribute="bottom" constant="25" id="lEr-QU-GAK"/>
+                            <constraint firstItem="WIP-Tl-W9D" firstAttribute="leading" secondItem="izc-tD-m3y" secondAttribute="trailing" constant="15" id="pEz-np-BXY"/>
+                            <constraint firstItem="2yW-8T-whP" firstAttribute="centerY" secondItem="3d0-xO-qZ7" secondAttribute="centerY" id="rYS-FN-sn3"/>
+                            <constraint firstItem="Exf-OH-1wi" firstAttribute="trailing" secondItem="gQK-J7-D0C" secondAttribute="trailing" id="udb-bu-Vfn"/>
+                            <constraint firstItem="izc-tD-m3y" firstAttribute="leading" secondItem="gQK-J7-D0C" secondAttribute="leading" constant="10" id="wKu-EF-3P6"/>
+                            <constraint firstItem="WIP-Tl-W9D" firstAttribute="centerY" secondItem="izc-tD-m3y" secondAttribute="centerY" id="zJ9-4c-tUs"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Ajustes" image="gearshape.2.fill" catalog="system" id="iNb-Nc-mTD"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69G-Qo-Equ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1955" y="3"/>
+            <point key="canvasLocation" x="1951.875" y="2.112676056338028"/>
         </scene>
     </scenes>
     <resources>
         <image name="gearshape.2.fill" catalog="system" width="128" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
