--- a/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/AddProduct.storyboard
+++ b/HeltonHeltonLyanRicardo/HeltonHeltonLyanRicardo/View/AddProduct.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mcW-5u-9Kx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wOp-0w-ooV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -12,7 +12,7 @@
         <!--Cadastrar Produto-->
         <scene sceneID="q9j-wO-cyf">
             <objects>
-                <viewController title="Cadastrar Produto" id="mcW-5u-9Kx" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewProductVC" title="Cadastrar Produto" id="mcW-5u-9Kx" customClass="NewProductViewController" customModule="HeltonHeltonLyanRicardo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xgD-9I-HCA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome do Produto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hw5-7Q-Pws">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Estado da compra" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hw5-7Q-Pws">
                                 <rect key="frame" x="20" y="382" width="319" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -32,8 +32,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddProduct" translatesAutoresizingMaskIntoConstraints="NO" id="a2p-nS-NpD">
-                                <rect key="frame" x="20" y="162" width="374" height="200"/>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bag.fill.badge.plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="a2p-nS-NpD">
+                                <rect key="frame" x="18" y="161.5" width="376" height="201"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="iIA-x3-XCD"/>
                                 </constraints>
@@ -49,6 +49,9 @@
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EEz-wg-0Ua">
                                 <rect key="frame" x="359" y="387" width="25" height="24"/>
+                                <connections>
+                                    <segue destination="Cs7-hc-2la" kind="show" id="b7J-l8-DWm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="De4-0t-ZXA">
                                 <rect key="frame" x="20" y="490" width="374" height="48"/>
@@ -59,6 +62,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="0.84705882349999995" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Cadastrar"/>
+                                <connections>
+                                    <action selector="submitNewProduct:" destination="mcW-5u-9Kx" eventType="touchUpInside" id="dPe-tq-7Rk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2Qv-0C-m09"/>
@@ -88,15 +94,31 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Cadastrar Produto" id="6F5-eu-bGN"/>
+                    <connections>
+                        <outlet property="creditCardSwitch" destination="f9V-CK-xI0" id="6OM-Rc-9zK"/>
+                        <outlet property="priceTextField" destination="z8P-TM-4Ep" id="1MQ-pr-2pf"/>
+                        <outlet property="productImageView" destination="a2p-nS-NpD" id="qfA-pt-G7I"/>
+                        <outlet property="productNameTextField" destination="V95-r5-5Id" id="ePM-DD-9Uy"/>
+                        <outlet property="stateNameTextField" destination="hw5-7Q-Pws" id="v4a-EA-tq0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f1b-Fl-ord" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-126.08695652173914" y="-227.00892857142856"/>
         </scene>
+        <!--SettingsVC-->
+        <scene sceneID="9m1-PJ-VeQ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Settings" referencedIdentifier="SettingsVC" id="Cs7-hc-2la" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="yeJ-vC-IlL"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OUU-nQ-JrE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="560" y="-258"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="GNt-W1-g5X">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CwA-TK-hHu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wOp-0w-ooV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="uiQ-XM-86c">
@@ -108,12 +130,13 @@
                         <segue destination="mcW-5u-9Kx" kind="relationship" relationship="rootViewController" id="Qmv-zc-Mg0"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CwA-TK-hHu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1036.231884057971" y="-227.00892857142856"/>
         </scene>
     </scenes>
     <resources>
-        <image name="AddProduct" width="512" height="512"/>
+        <image name="bag.fill.badge.plus" catalog="system" width="128" height="128"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
